Fix alignment and padding in users settings popup, fix icons staying highlighted after switching to settings

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -431,8 +431,12 @@ button[disabled] .k-icon, button[disabled] .k-icon:hover{
     margin-left: 2px;
 }
 .k-edit-form-container .k-grid-update{
-    margin-left: 120px;
+    margin-left: 116px;
     .buttonGradient;
+}
+div.k-window-content{
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 .k-edit-form-container .k-grid-update:hover{
     .buttonGradientHover;
@@ -441,6 +445,9 @@ button[disabled] .k-icon, button[disabled] .k-icon:hover{
     margin-left: 87px;
     margin-right: 0;
     .buttonGradient;
+}
+.k-edit-form-container .k-edit-label{
+    margin-left: 45px;
 }
 #btnAdd:hover{
     .buttonGradientHover;
@@ -478,6 +485,9 @@ button[disabled] .k-icon, button[disabled] .k-icon:hover{
 }
 .k-edit-form-container .k-dropdown{
     width: 157px;
+}
+.k-edit-field{
+  width: 200px;
 }
 /*endregion*/
 /*region Settings - Dispatcher*/
